fixed spacing

--- a/Pricing.css
+++ b/Pricing.css
@@ -20,22 +20,22 @@ body {
 #Picture1 {
   position: absolute;
   left: 0px;
-  top: 70px;
+  top: 150px;
 }
 #Picture2 {
   position: absolute;
   left: 50px;
-  top: 70px;
+  top: 400px;
 }
 #Picture3 {
   position: absolute;
-  top: 70px;
-  right: 50px;
+  top: 150px;
+  right: 400px;
 }
 #Picture4 {
   position: absolute;
   right: 0px;
-  top: 70px;
+  top: 150px;
 }
 
 #buttons {
